# IZ2_Techno

./: .gitignore  README.md
untitled/: CMakeLists.txt
untitled/.github/workflows/: CI.yml
untitled/lib/: CMakeLists.txt
untitled/lib/parallel/: parallel.c  parallel.h  segment.h
untitled/lib/sequential/: sequential.c  sequential.h
untitled/lib/utils/: utils.c  utils.h
untitled/linters/: run.sh
untitled/project/: CMakeLists.txt  names.txt  project
untitled/project/src/: main.c
untitled/tests/: CMakeLists.txt  date_test_1.txt  letter_test_1.txt  mailer_test_1.txt  names_test_1.txt  recipients_test_1.txt  test.cpp  tests  topic_test_1.txt
